# hoops-spread

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtest_results/: backtest_summary_fundamental.json  backtest_summary_market.json  bet_history_fundamental.csv  bet_history_market.csv  feature_pnl_attribution_fundamental.csv  feature_pnl_attribution_market.csv  global_importance_fundamental.csv  global_importance_market.csv
hoops-spread/: cli.py
hoops-spread/backtesting/: __init__.py  initial_backtest.py  pipeline.py
hoops-spread/modeling/: model_pipeline.py  select_features_boruta.py  train_xgboost.py
hoops_spread/: __init__.py
hoops_spread/backtesting/: initial_backtest.py
hoops_spread/modeling/: __init__.py  generate_all_features.py  model_pipeline_full.py
models/: xgb_cover_fundamental.pkl  xgb_cover_market.pkl
tests/: __init__.py  run_tests.py  test_smoke.py
tests/unit/: __init__.py  test_comprehensive.py  test_config.py  test_data_collection.py  test_feature_engineering.py  test_preprocessing.py
wip/data_collection/: altitude_and_arena_merge.py  arena_assignment.py  assign_school_codes.py  calculate_elo.py  clean_data.py  collect_pipeline.py  fetch_full_bart_torvik.py  fetch_schedules.py  merge_additional_columns.py  merge_team_stats.py
wip/feature_engineering/: additional_coaching_stats.py  advanced_derived_features.py  append_sentiment.py  clean_team_names.py  coach_start_date.py  cum_pre_game_stats.py  data_nan_cleaner.py  feature_pipeline.py  fix_duplicate_school_names_inplace.py  fix_duplicate_team_names_inplace.py  fix_first_season_and_total_seasons_at_team.py  remove_nan_specific.py  verify_team_name_cleanup.py
wip/sentiment/: alias_deduper.py  dedup_school_codes.py  extract_school_mentions_vectorized.py  school_aliases.py  scrape_subs.py  sentiment_pipeline.py  timeseries_sentiment_analysis_memory_efficient.py
